--- a/vercel.json
+++ b/vercel.json
@@ -23,5 +23,7 @@
     }
   ],
   "installCommand": "pip install -r backend/requirements.txt && npm install",
-  "buildCommand": "npm run build"
+  "buildCommand": "npm run build",
+
+  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
 }
